# talks-reducer

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTION.md  README.md  TODO.md  default.nix  filter_spec.py  jumpcutter.py  launcher.py  pyproject.toml  requirements.txt  talks-reducer.spec  talks_reducer.py  tatus  version.txt
.cursor/rules/: index.mdc
.github/workflows/: ci.yml
docs/: TODO.md  build.md  cli.md  gui.md  obs-dock.md  server.md
docs/plans/: 2026-04-03-brew-cask-distribution.md  (+9 more)
scripts/: build-dist.sh  build-gui.sh  build-installer.ps1  build-installer.sh  deploy-patch.sh  deploy.py  generate_changelog.py  generate_icons.sh  get-version.py  publish.sh  requirements-pyinstaller.txt  talks-reducer-installer.iss  talks-reducer-installer.nsi
talks_reducer/: __about__.py  __main__.py  audio.py  cli.py  config.py  discovery.py  dock_server.py  ffmpeg.py  gui.py  gui_remote.py  icons.py  logging_config.py  models.py  pipeline.py  presets.py  progress.py  server.py  server_args.py  server_tray.py  service_client.py  timecode.py  vad.py  wav_io.py  windows_taskbar.py
tests/: test_audio.py  test_cli.py  test_config.py  test_discovery.py  test_dock_server.py  test_ffmpeg.py  test_gui_app.py  test_gui_discovery.py  test_gui_global_ffmpeg.py  test_gui_inputs.py  test_gui_layout.py  test_gui_preferences.py  test_gui_progress.py  test_gui_relaunch.py  test_gui_remote.py  test_gui_shortcut.py  test_gui_startup.py  test_gui_summary_parsing.py  test_gui_taskbar.py  test_gui_theme.py  test_gui_title_bar.py  test_gui_tooltips.py  test_gui_watch.py  test_models.py  test_pipeline.py  test_pipeline_service.py  test_presets.py  test_progress.py  test_pyinstaller_spec.py  test_server.py  test_server_tray.py  test_service_client.py  test_timecode.py  test_update_checker.py  test_wav_io.py  test_windows_taskbar.py
(+42 files in other folders)
