[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talks-reducer"
dynamic = ["version"]
description = "CLI for speeding up long-form talks by removing silence"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Talks Reducer Maintainers" }
]
dependencies = [
    "audiotsm>=0.1.2",
    "numpy>=1.22.0",
    "tqdm>=4.65.0",
    # Cap below 0.4.4: newer releases ship a Tcl 9 tkdnd for macOS arm64 that is
    # incompatible with the bundled Tcl/Tk 8.6 (incompatible stubs mechanism).
    "tkinterdnd2>=0.3.0,<0.4.4",
    "Pillow>=9.0.0",
    "pystray>=0.19.5",
    "static-ffmpeg>=2.13",
    "gradio>=4.0.0",
    # Provides the CA bundle the update checker needs so HTTPS verification
    # works in frozen builds that lack the system certificates.
    "certifi>=2023.7.22",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "bump-my-version>=0.5.0",
    "pyinstaller>=6.4.0",
    "git-cliff>=2.0.0",
]

[project.scripts]
talks-reducer = "talks_reducer.cli:main"
talks-reducer-gui = "talks_reducer.gui:main"
talks-reducer-server = "talks_reducer.server:main"
talks-reducer-server-tray = "talks_reducer.server_tray:main"

[tool.setuptools.dynamic]
version = {attr = "talks_reducer.__about__.__version__"}

[tool.black]
line-length = 88
target-version = ["py39"]
extend-exclude = "/\\.history/"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["talks_reducer"]
extend_skip_glob = [".history/*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"talks_reducer.resources" = [
    "icons/*.png",
    "icons/*.ico",
    "icons/*.icns",
]

